@@ -1,8 +1,6 @@
-import http
 import inspect
 import json as json_module
 import logging
-import socket
 from functools import partialmethod
 from functools import wraps
 from http import client
@@ -535,25 +533,38 @@ def _form_response(
     headers: Optional[Mapping[str, str]],
     status: int,
 ) -> HTTPResponse:
-    dummy_socket = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
-    orig_response = http.client.HTTPResponse(sock=dummy_socket)
     """
+    Function to generate `urllib3.response.HTTPResponse` object.
+
     The cookie handling functionality of the `requests` library relies on the response object
     having an original response object with the headers stored in the `msg` attribute.
     Instead of supplying a file-like object of type `HTTPMessage` for the headers, we provide
     the headers directly. This approach eliminates the need to parse the headers into a file-like
     object and then rely on the library to unparse it back. These additional conversions can
     introduce potential errors.
-    Therefore, we intentionally ignore type checking for this assignment.
     """
-    orig_response.msg = headers  # type: ignore[assignment]
 
+    data = BytesIO()
+    data.close()
+
+    """
+    The type `urllib3.response.HTTPResponse` is incorrect; we should
+    use `http.client.HTTPResponse` instead. However, changing this requires opening
+    a real socket to imitate the object. This may not be desired, as some users may
+    want to completely restrict network access in their tests.
+    See https://github.com/getsentry/responses/issues/691
+    """
+    orig_response = HTTPResponse(
+        body=data,  # required to avoid "ValueError: Unable to determine whether fp is closed."
+        msg=headers,  # type: ignore[arg-type]
+        preload_content=False,
+    )
     return HTTPResponse(
         status=status,
         reason=client.responses.get(status, None),
         body=body,
         headers=headers,
-        original_response=orig_response,
+        original_response=orig_response,  # type: ignore[arg-type]  # See comment above
         preload_content=False,
     )
 
