@@ -1,6 +1,11 @@
 [tox]
 envlist = py38,py39,py310,py311,mypy,precom
 
+[pytest]
+filterwarnings =
+    error
+    default::DeprecationWarning
+
 [testenv]
 extras = tests
 commands =
